Bibliography touch-ups

--- a/alantree.bib
+++ b/alantree.bib
@@ -1,141 +1,148 @@
-@Article{fill.pemantle:percolation,
-   author = {James Allen Fill and Robin Pemantle},
-   title = {Percolation, First-Passage Percolation and Covering Times
-            for {R}ichardson's Model on the $n$-Cube},
-   journal = {The Annals of Applied Probability},
-   volume = 3,
-   number = 2,
-   pages = {593--629},
-   year = {1993}
+
+@Misc{		  balister.bollobas.ea:first-passage,
+  author	= {P. N. Balister and B. Bollob{\'a}s and A. M. Frieze and O.
+		  M. Riordan},
+  title		= {The first-passage diameter of the cube},
+  note		= {Unpublished manuscript},
+  year		= {2017}
 }
 
-@Book{mohar.thomassen:graphs,
-   author = {Bojan Mohar and Carsten Thomassen},
-   title = {Graphs on Surfaces},
-   publisher = {Johns Hopkins University Press},
-   address = {Baltimore, Maryland},
-   year = 2001,
-} 
-
-@Article{martinsson:unoriented,
-   author = {Anders Martinsson},
-   title = {Unoriented First-Passage Percolation on the $n$-Cube},
-   journal = {The Annals of Applied Probability},
-   volume = 26,
-   number = 5,
-   pages = {2597--2625},
-   year = {2016}
+@InCollection{	  bollobas.kohayakawa:on,
+  author	= {B{\'e}la Bollob{\'a}s and Yoshiharu Kohayakawa},
+  title		= {On {R}ichardson's Model on the Hypercube},
+  booktitle	= {Combinatorics, Geometry, and Probability (Cambridge
+		  1993)},
+  pages		= {129--137},
+  publisher	= {Cambridge University Press},
+  year		= {1997}
 }
 
-@InCollection{bollobas.kohayakawa:on,
-   author = {B{\'e}la Bollob{\'a}s and Yoshiharu Kohayakawa},
-   title = {On {R}ichardson's Model on the Hypercube},
-   booktitle = {Combinatorics, Geometry, and Probability (Cambridge 1993)},
-   pages = {129--137},
-   publisher = {Cambridge University Press},
-   year = {1997}
+@Article{	  bollobas:isoperimetric,
+  author	= {B{\'{e}}la Bollob{\'{a}}s},
+  title		= {The Isoperimetric Number of Random Regular Graphs},
+  journal	= {Eur. J. Comb.},
+  volume	= {9},
+  number	= {3},
+  pages		= {241--244},
+  year		= {1988}
 }
 
-
-@article{devroye:branching,
-  author    = {Luc Devroye},
-  title     = {Branching Processes in the Analysis of the Heights of Trees},
-  journal   = {Acta Informatica},
-  volume    = {24},
-  number    = {3},
-  pages     = {277--298},
-  year      = {1987},
-  url       = {http://dx.doi.org/10.1007/BF00265991},
+@Book{		  boucheron2013concentration,
+  title		= {Concentration inequalities: A nonasymptotic theory of
+		  independence},
+  author	= {Boucheron, St{\'e}phane and Lugosi, G{\'a}bor and Massart,
+		  Pascal},
+  year		= {2013},
+  publisher	= {Oxford university press}
 }
 
-@article{pittel:note,
-  author    = {Boris Pittel},
-  title     = {Note on the Heights of Random Recursive Trees and Random m-ary Search
-               Trees},
-  journal   = {Random Struct. Algorithms},
-  volume    = {5},
-  number    = {2},
-  pages     = {337--348},
-  year      = {1994},
-  url       = {http://dx.doi.org/10.1002/rsa.3240050207},
+@Article{	  devroye:branching,
+  author	= {Luc Devroye},
+  title		= {Branching Processes in the Analysis of the Heights of
+		  Trees},
+  journal	= {Acta Informatica},
+  volume	= {24},
+  number	= {3},
+  pages		= {277--298},
+  year		= {1987},
+  url		= {http://dx.doi.org/10.1007/BF00265991}
 }
 
-@article{bollobas:isoperimetric,
-  author    = {B{\'{e}}la Bollob{\'{a}}s},
-  title     = {The Isoperimetric Number of Random Regular Graphs},
-  journal   = {Eur. J. Comb.},
-  volume    = {9},
-  number    = {3},
-  pages     = {241--244},
-  year      = {1988},
+@Article{	  fill.pemantle:percolation,
+  author	= {James Allen Fill and Robin Pemantle},
+  title		= {Percolation, First-Passage Percolation and Covering Times
+		  for {R}ichardson's Model on the $n$-Cube},
+  journal	= {The Annals of Applied Probability},
+  volume	= 3,
+  number	= 2,
+  pages		= {593--629},
+  year		= {1993}
 }
 
-@Inbook{McDiarmid1998,
-author="McDiarmid, Colin",
-editor="Habib, Michel
-and McDiarmid, Colin
-and Ramirez-Alfonsin, Jorge
-and Reed, Bruce",
-title="Concentration",
-bookTitle="Probabilistic Methods for Algorithmic Discrete Mathematics",
-year="1998",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="195--248",
-isbn="978-3-662-12788-9",
-doi="10.1007/978-3-662-12788-9_6",
-url="http://dx.doi.org/10.1007/978-3-662-12788-9_6",
-note="available at \url{http://www.stats.ox.ac.uk/people/academic_staff/colin_mcdiarmid/?a=4139}"
+@Article{	  fpp_survey,
+  author	= {Antonio Auffinger and Michael Damron and Jack Hanson},
+  title		= {50 years of first passage percolation},
+  journal	= {arXiv},
+  volume	= {1511.03262~[math.PR]},
+  year		= {2016}
 }
 
-@unpublished{janson,
-author="Janson, S.",
-title="Tail bounds for sums of geometric and exponential variables",
-note="available in \url{http://www2.math.uu.se/~svante/papers/sjN14.pdf}"
+@Unpublished{	  janson,
+  author	= "Janson, Svante",
+  title		= "Tail bounds for sums of geometric and exponential
+		  variables",
+  note		= "available in
+		  \url{http://www2.math.uu.se/~svante/papers/sjN14.pdf}"
 }
 
-@book{boucheron2013concentration,
-  title={Concentration inequalities: A nonasymptotic theory of independence},
-  author={Boucheron, St{\'e}phane and Lugosi, G{\'a}bor and Massart, Pascal},
-  year={2013},
-  publisher={Oxford university press}
+@Article{	  martinsson:unoriented,
+  author	= {Anders Martinsson},
+  title		= {Unoriented First-Passage Percolation on the $n$-Cube},
+  journal	= {The Annals of Applied Probability},
+  volume	= 26,
+  number	= 5,
+  pages		= {2597--2625},
+  year		= {2016}
 }
 
-@incollection {richardson_survey,
-    AUTHOR = {Durrett, R.},
-     TITLE = {Stochastic growth models: recent results and open problems},
- BOOKTITLE = {Mathematical approaches to problems in resource management and
-              epidemiology ({I}thaca, {NY}, 1987)},
-    SERIES = {Lecture Notes in Biomath.},
-    VOLUME = {81},
-     PAGES = {308--312},
- PUBLISHER = {Springer, Berlin},
-      YEAR = {1989},
-   MRCLASS = {92A15 (60K35)},
-  MRNUMBER = {1041337 (90m:92052)},
-       DOI = {10.1007/978-3-642-46693-9_21},
+@InCollection {	  mcdiarmid1998,
+  author	= "McDiarmid, Colin",
+  editor	= "Habib, Michel and McDiarmid, Colin and Ramirez-Alfonsin,
+		  Jorge and Reed, Bruce",
+  title		= "Concentration",
+  booktitle	= "Probabilistic Methods for Algorithmic Discrete
+		  Mathematics",
+  year		= "1998",
+  publisher	= "Springer Berlin Heidelberg",
+  address	= "Berlin, Heidelberg",
+  pages		= "195--248",
+  isbn		= "978-3-662-12788-9",
+  doi		= "10.1007/978-3-662-12788-9_6",
+  url		= "http://dx.doi.org/10.1007/978-3-662-12788-9_6",
+  note		= "available at
+		  \url{http://www.stats.ox.ac.uk/people/academic_staff/colin_mcdiarmid/?a=4139}"
 }
 
-@article{fpp_survey,
-  author    = {A. Auffinger and M. Damron and J. Hanson},
-  title     = {50 years of first passage percolation},
-  journal   = {arXiv},
-  volume = {1511.03262~[math.PR]},
-  year      = {2016},
+@Book{		  mohar.thomassen:graphs,
+  author	= {Bojan Mohar and Carsten Thomassen},
+  title		= {Graphs on Surfaces},
+  publisher	= {Johns Hopkins University Press},
+  address	= {Baltimore, Maryland},
+  year		= 2001
 }
 
-@TechReport{wolle.koster.ea:note,
-  author    = {T Wolle and A. M. C. A. Koster and H. L. Bodlaender},
-  title     = {A Note on Contraction Degeneracy},
-  institution = {University of Utrecht},
-  year      = {2004},
-  number    = {UU-CS-2004-042} 
+@Article{	  pittel:note,
+  author	= {Boris Pittel},
+  title		= {Note on the Heights of Random Recursive Trees and Random
+		  m-ary Search Trees},
+  journal	= {Random Struct. Algorithms},
+  volume	= {5},
+  number	= {2},
+  pages		= {337--348},
+  year		= {1994},
+  url		= {http://dx.doi.org/10.1002/rsa.3240050207}
 }
 
-@Misc{balister.bollobas.ea:first-passage,
-  author    = {P. N. Balister and B. Bollob{\'a}s and A. M. Frieze and O. M. Riordan},
-  title     = {The first-passage diameter of the cube},
-  note      = {Unpublished manuscript},
-  year      = {2017}
+@InCollection{	  richardson_survey,
+  author	= {Durrett, R.},
+  title		= {Stochastic growth models: recent results and open
+		  problems},
+  booktitle	= {Mathematical approaches to problems in resource management
+		  and epidemiology ({I}thaca, {NY}, 1987)},
+  series	= {Lecture Notes in Biomath.},
+  volume	= {81},
+  pages		= {308--312},
+  publisher	= {Springer, Berlin},
+  year		= {1989},
+  mrclass	= {92A15 (60K35)},
+  mrnumber	= {1041337 (90m:92052)},
+  doi		= {10.1007/978-3-642-46693-9_21}
 }
 
+@TechReport{	  wolle.koster.ea:note,
+  author	= {Thomas Wolle and Arie M.C.A. Koster and Hans L. Bodlaender},
+  title		= {A Note on Contraction Degeneracy},
+  institution	= {University of Utrecht},
+  year		= {2004},
+  number	= {UU-CS-2004-042}
+}
