Grant numbers for Alan

--- a/alantree.tex
+++ b/alantree.tex
@@ -58,7 +58,8 @@
 \newcommand{\tcal}{\mathcal{T}}
 
 \title{\MakeUppercase{Notes on Growing a Tree in a Graph}\thanks{%
-This research was partly supported by NSERC and by NSF GRANT DMS1661063.
+This research was partly supported by NSERC and by NSF grants DMS1661063
+and DMS1362785.
 Some of this work was carried out while Vida Dujmovi\'c, Pat Morin, and
 Bruce Reed were visiting IMPA in Rio de Janeiro. They thank the Institute
 for its hospitality. }}
